err/mipp.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mipp'...
Compiling './lib/python3.5/site-packages/mipp/cfg.py'...
***   File "./lib/python3.5/site-packages/mipp/cfg.py", line 115
    print _name
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mipp/mda.py'...
***   File "./lib/python3.5/site-packages/mipp/mda.py", line 84
    print Metadata().read(sys.argv[1])
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mipp/read_geotiff.py'...
***   File "./lib/python3.5/site-packages/mipp/read_geotiff.py", line 171
    print 'RESULT :'
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mipp/xrit'...
Compiling './lib/python3.5/site-packages/mipp/xrit/H8.py'...
***   File "./lib/python3.5/site-packages/mipp/xrit/H8.py", line 204
    print read_metadata(None, sys.argv[1:])
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mipp/xrit/MSG.py'...
***   File "./lib/python3.5/site-packages/mipp/xrit/MSG.py", line 943
    print read_metadata(p, sys.argv[2:-1], e)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mipp/xrit/MTP.py'...
***   File "./lib/python3.5/site-packages/mipp/xrit/MTP.py", line 335
    print read_metadata(p, sys.argv[2:])
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mipp/xrit/SGS.py'...
***   File "./lib/python3.5/site-packages/mipp/xrit/SGS.py", line 124
    print read_metadata(_xrit.read_prologue(sys.argv[1]), sys.argv[2:])
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mipp/xrit/_xrit.py'...
***   File "./lib/python3.5/site-packages/mipp/xrit/_xrit.py", line 306
    print k + ':', self.__dict__[k]
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mipp/xrit/bin_reader.py'...
***   File "./lib/python3.5/site-packages/mipp/xrit/bin_reader.py", line 20
    return v[0]*pow(2L, 32) + v[1]
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mipp/xrit/loader.py'...
***   File "./lib/python3.5/site-packages/mipp/xrit/loader.py", line 131
    raise TypeError, "optional argument must be an area_extent"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mipp/xrit/mda.py'...
***   File "./lib/python3.5/site-packages/mipp/xrit/mda.py", line 13
    print Metadata().read(sys.argv[1])
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mipp/xrit/sat.py'...
***   File "./lib/python3.5/site-packages/mipp/xrit/sat.py", line 70
    except ImportError, err:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mipp/xsar'...
Compiling './lib/python3.5/site-packages/mipp/xsar/CSK.py'...
***   File "./lib/python3.5/site-packages/mipp/xsar/CSK.py", line 27
    raise mipp.CalibrationError, self.error
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mipp/xsar/RS2.py'...
***   File "./lib/python3.5/site-packages/mipp/xsar/RS2.py", line 98
    print mda
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mipp/xsar/S1A.py'...
***   File "./lib/python3.5/site-packages/mipp/xsar/S1A.py", line 194
    print read_metadata(sys.argv[1])
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mipp/xsar/TSX.py'...
***   File "./lib/python3.5/site-packages/mipp/xsar/TSX.py", line 38
    raise mipp.CalibrationError, self.error
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mipp/xsar/mda.py'...
***   File "./lib/python3.5/site-packages/mipp/xsar/mda.py", line 14
    print Metadata().read(sys.argv[1])
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mipp/xsar/sat.py'...
***   File "./lib/python3.5/site-packages/mipp/xsar/sat.py", line 121
    raise IOError, "No such directory: %s" % opt['dir']
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mipp-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
